none: Update changelog and metainfo files.